frontend/test/should_pass/computations_induced_defined.grg
foo(n1:Node, -e1:Edge->) : (int)
{
	def var res:int = 42;
	
	def var g1:graph = inducedSubgraph(adjacent(n1));
	def var g2:graph = definedSubgraph(incident(n1));
	def var n2:Node;
	(n2) = insertInduced(adjacent(n1), n1);
	def var e2:Edge;
	(e2) = insertDefined(incident(n1), e1);
	
	return(res);
}

bar(n1:Node, -e1:Edge->) : int
{
	def var res:int = 42;
	
	def var g1:graph = inducedSubgraph(adjacent(n1));
	def var g2:graph = definedSubgraph(incident(n1));
	
	return(res);
}

test t(n1:Node, -e1:Edge->) : (int)
{
	def var res:int = 42;
	
	independent {
		yield {
			def var g1:graph = inducedSubgraph(adjacent(n1));
			def var g2:graph = definedSubgraph(incident(n1));
		}
	}
	
	return (res);
}

rule r(n1:Node, -e1:Edge->) : (int)
{
	if(inducedSubgraph(adjacent(n1)) == definedSubgraph(incident(n1)));
	
	modify {
		def var res:int = 42;
		
		eval { 
			def var g1:graph = inducedSubgraph(adjacent(n1));
			def var g2:graph = definedSubgraph(incident(n1));
			def var n2:Node;
			(n2) = insertInduced(adjacent(n1), n1);
			def var e2:Edge;
			(e2) = insertDefined(incident(n1), e1);
		}
		
		return (res);
	}
}
