frontend/test/should_fail/computations_no_proc2.grg
procedure foo() : (int)
{
	return(42);
}

test bar()
{	
	optional {
	---
		yield {
			(yield x) = foo();
		}
	}
---
	def var x:int;
}
